syntax = "proto3";

package Proj.Proto;

option java_multiple_files = true;
option java_package = "proj_contract.services";

import "Connection.proto";
import "LocationClaim.proto";
import "LocationEndorsement.proto";
import "Register.proto";

service ServerService {
	rpc broadcastConnectionInfoRequest(ConnectionInfo) returns (ServerResponse);
	rpc sendConnectionInfo(ConnectionInfo) returns (ServerResponse);
	rpc requestConnection(ConnectionInfo) returns (ServerResponse);

	rpc register(RegisterRequest) returns (ServerResponse);
	
	rpc sendLocationClaim(LocationClaimWithId) returns (ServerResponse);
	rpc requestLocationEndorsement(LocationEndorsementRequestWithId) returns (ServerResponse);
	rpc sendLocationEndorsement(LocationEndorsementWithId) returns (ServerResponse);
}

message ServerResponse {
	string responseMessage = 1;
	int32 responseCode = 2;
}